fabric/testdata/out/ing_brexit-mgmt-test-ralmeida-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"ae043f81-ecb4-4dd8-8a28-e08278e4eae8","deployment-id":"d-n8kgbacnbwvvrvjq1i4r3jwac","pipeline-id":"l-kham1wbmzaojugzy8cubi4fib"},"name":"brexit-mgmt-test-ralmeida-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"brexit-mgmt-test-ralmeida.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"brexit-mgmt-test-ralmeida","servicePort":"http"},"pathType":"ImplementationSpecific"}]}}]}}'
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2021-06-22T16:06:57Z"
  generation: 1
  labels:
    controller-uid: ae043f81-ecb4-4dd8-8a28-e08278e4eae8
    deployment-id: d-n8kgbacnbwvvrvjq1i4r3jwac
    pipeline-id: l-kham1wbmzaojugzy8cubi4fib
  name: brexit-mgmt-test-ralmeida-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brexit-mgmt-test-ralmeida
    uid: ae043f81-ecb4-4dd8-8a28-e08278e4eae8
  resourceVersion: "1357488333"
  uid: 8c1215b7-4f3a-4d4b-b7be-2cc811a0e07c
spec:
  rules:
  - host: brexit-mgmt-test-ralmeida.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brexit-mgmt-test-ralmeida
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
